Fix some UI bugs
Most fields displayed can now wrap when the field is too long.

--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -350,3 +350,7 @@
     -fx-background-radius: 2;
     -fx-font-size: 11;
 }
+
+.corner {
+    -fx-background-color: transparent;
+}
